--- a/crudapp/templates/client.html
+++ b/crudapp/templates/client.html
@@ -3,16 +3,16 @@
 {%block header %}
 
 <script>
-    function sendCode(code){
+    function sendCode(id){
         // document.querySelector("#codeToEdit").innerHTML = code;
         // console.log(code);
 
-        var el = document.getElementById('editAgence');
+        var el = document.getElementById('editClient');
 
         el.onclick = showFoo;
         function showFoo() {
-            document.querySelector("#codeToEdit").value = code;
-            console.log(code)
+            document.querySelector("#codeToEdit").value = id;
+            console.log(id)
         }
 
 
@@ -28,34 +28,34 @@
 			<div class="table-title">
 				<div class="row">
 					<div class="col-sm-6">
-						<h2>Information sur <b>Agences</b></h2>
+						<h2>Information sur <b>Clients</b></h2>
 					</div>
 					<div class="col-sm-6">
-						<a href="#ajouterAgence"class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Ajouter agence</span></a>
-						<a href="#deleteAgence" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Supprimer</span></a>						
+						<a href="#ajouterClient"class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Ajouter client</span></a>
+						<a href="#deleteClient" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Supprimer</span></a>						
 					</div>
 				</div>
 			</div>
 			<table class="table table-striped table-hover">
 				<thead>
 					<tr>
-						<th >Code</th>
-						<th>Adresse</th>
+						<th>id</th>
+						<th>Date de Naissance</th>
 						<th>Nom</th>
-						<th>Telephone</th>
-						<th>Comptes</th>
+						<th>Prenom</th>
+						<th>Actions</th>
 					</tr>
 				</thead>
 				<tbody>
                     {% for context in contexts %}
 					<tr>
-						<td>{{context.code}}</td>
-						<td>{{context.adresse}}</td>
+						<td>{{context.id}}</td>
+						<td>{{context.date_naissance}}</td>
 						<td>{{context.nom}}</td>
-						<td>{{context.telephone}}</td>
+						<td>{{context.prenom}}</td>
 						<td>
-							<a href="#editAgence" onclick="sendCode('{{context.code}}')" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-							<a href="{{url_for('deleteAgence',code=context.code)}}" ><i class="material-icons" title="Delete">&#xE872;</i></a>
+							<a href="#editClient" onclick="sendCode('{{context.id}}')" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+							<a href="{{url_for('deleteClient',id=context.id)}}" ><i class="material-icons" title="Delete">&#xE872;</i></a>
 						</td>
                     </tr> 
                     {% endfor %}
@@ -77,65 +77,61 @@
 	</div>        
 </div>
 <!-- Edit Modal HTML -->
-<div id="ajouterAgence" class="modal fade">
+<div id="ajouterClient" class="modal fade">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<form method="post" action="{{ url_for('ajouterAgence')}}">
+			<form method="post" action="{{ url_for('ajouterClient')}}">
 				<div class="modal-header">						
-					<h4 class="modal-title">Ajouter une agence</h4>
+					<h4 class="modal-title">Ajouter une Client</h4>
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 				</div>
 				<div class="modal-body">					
 					<div class="form-group">
-						<label>Code (3 lettres)</label>
-						<input type="text" name="code" class="form-control" required>
-					</div>
-					<div class="form-group">
-						<label>Adresse</label>
-						<input type="text" name="adresse" class="form-control" required>
+						<label>Date de Naissance</label>
+						<input type="text" name="date_naissance" class="form-control" required>
 					</div>
 					<div class="form-group">
 						<label>Nom</label>
 						<input type="text" name="nom" class="form-control" required>	
 					</div>
 					<div class="form-group">
-						<label>Telephone</label>
-						<input type="text" name="telephone" class="form-control" required>	
+						<label>Prenom</label>
+						<input type="text" name="prenom" class="form-control" required>	
 					</div>					
 				</div>
 				<div class="modal-footer">
 					<input type="button" class="btn btn-default" data-dismiss="modal" value="Annuler">
-					<input id="ajouterAgence" type="submit" class="btn btn-success" value="Enregistrer">
+					<input id="ajouterClient" type="submit" class="btn btn-success" value="Enregistrer">
 				</div>
 			</form>
 		</div>
 	</div>
 </div>
 <!-- Edit Modal HTML -->
-<div id="editAgence" class="modal fade">
+<div id="editClient" class="modal fade">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<form method="post" action="{{ url_for('editAgence')}}">
+			<form method="post" action="{{ url_for('editClient')}}">
 				<div class="modal-header">						
-					<h4 class="modal-title">Modifier Agence</h4>
+					<h4 class="modal-title">Modifier Client</h4>
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 				</div>
 				<div class="modal-body">					
 					<div class="form-group">
-                        <label>Code de l'agence a Modifier</label>
-						<input id="codeToEdit" type="text" name="code" class="form-control" >
+                        <label>ID de l'Client a Modifier</label>
+						<input id="codeToEdit" type="text" name="id" class="form-control" >
 					</div>
 					<div class="form-group">
-						<label>Adresse</label>
-						<input type="text" name="adresse" class="form-control">
+						<label>Date de Naissance</label>
+						<input type="text" name="date_naissance" class="form-control">
 					</div>
 					<div class="form-group">
 						<label>Nom</label>
 						<input type="text" name="nom" class="form-control" >	
 					</div>
 					<div class="form-group">
-						<label>Telephone</label>
-						<input type="text" name="telephone" class="form-control">	
+						<label>Prenom</label>
+						<input type="text" name="prenom" class="form-control">	
 					</div>					
 				</div>
 				<div class="modal-footer">
@@ -147,16 +143,16 @@
 	</div>
 </div>
 <!-- Delete Modal HTML -->
-<div id="deleteAgence" class="modal fade">
+<div id="deleteClient" class="modal fade">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<form>
 				<div class="modal-header">						
-					<h4 class="modal-title">Supprimer Agence</h4>
+					<h4 class="modal-title">Supprimer Client</h4>
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 				</div>
 				<div class="modal-body">					
-					<p>Etes vous sure de vouloir supprimer cet agence ?</p>
+					<p>Etes vous sure de vouloir supprimer cet Client ?</p>
 					<p class="text-warning"><small>Cet action est irreversible .</small></p>
 				</div>
 				<div class="modal-footer">
