--- a/crudapp/templates/index.html
+++ b/crudapp/templates/index.html
@@ -26,10 +26,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Agences</a>
+              <a class="nav-link" href="{{url_for('agence')}}">Agences</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Client</a>
+              <a class="nav-link" href="{{url_for('client')}}">Client</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="#">Compte</a>
