--- a/crudapp/templates/index.html
+++ b/crudapp/templates/index.html
@@ -32,7 +32,7 @@
               <a class="nav-link" href="{{url_for('client')}}">Client</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Compte</a>
+                <a class="nav-link" href="{{url_for('compte')}}">Compte</a>
               </li>
           </ul>
         </div>
